--- a/src/pages/Home/AllCast/AllCast.css
+++ b/src/pages/Home/AllCast/AllCast.css
@@ -7,13 +7,22 @@
 }
 
 .card-info {
+  position: relative;
   -webkit-clip-path: polygon(0% 0%, 100% 0, 100% 87%, 70% 100%, 0% 100%);
   clip-path: polygon(0% 0%, 100% 0, 100% 87%, 70% 100%, 0% 100%);
-  box-sizing: border-box;
-
-  background: rgba(255, 255, 255, 0.05);
-  backdrop-filter: blur(3.77917px);
-  /* Note: backdrop-filter has minimal browser support */
-
+  background-color: rgba(255, 255, 255, 0.05);
+}
+.card-info::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   border-radius: 12.0933px;
+  border: 1px solid transparent;
+  background: linear-gradient(45deg, #9dfe00, #14d9e6) border-box;
+  -webkit-mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: destination-out;
+  mask-composite: exclude;
 }
