--- a/src/pages/Home/Episode/Episode.css
+++ b/src/pages/Home/Episode/Episode.css
@@ -8,25 +8,29 @@
   color: #ffffff;
 }
 .episode-card {
+    position: relative;
   -webkit-clip-path: polygon(0% 0%, 100% 0, 100% 81%, 79% 100%, 0% 100%);
   clip-path: polygon(0% 0%, 100% 0, 100% 81%, 79% 100%, 0% 100%);
   height: 96px;
-  background: rgba(255, 255, 255, 0.05);
+  width: 100%;
+  padding: 10px;
+  border-radius: 10px;
+  backdrop-filter: blur(3.77917px);
+  background: linear-gradient(45deg, #9dfe00, #14d9e6) ;
+
 }
 
-.episode-card::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  border-radius: 10px;
-  border: 1px solid transparent;
-  background: linear-gradient(45deg, #9dfe00, #14d9e6) border-box;
-  -webkit-mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
-  -webkit-mask-composite: destination-out;
-  mask-composite: exclude;
+.episode-character {
+    position: absolute;
+    top: 1px;
+    left: 1px;
+    right: 1px;
+    bottom: 1px;
+    border-radius: 10px;
+    backdrop-filter: blur(3.77917px);
+    background: rgb(43, 42, 42);
+    -webkit-clip-path: polygon(0% 0%, 100% 0, 100% 81%, 79% 100%, 0% 100%);
+    clip-path: polygon(0% 0%, 100% 0, 100% 81%, 79% 100%, 0% 100%);
 }
 
 .episode-card p {
