--- a/src/pages/Home/Location/Location.css
+++ b/src/pages/Home/Location/Location.css
@@ -8,24 +8,27 @@
   color: #ffffff;
 }
 .location-card {
-  -webkit-clip-path: polygon(0% 0%, 100% 0, 100% 81%, 79% 100%, 0% 100%);
-  clip-path: polygon(0% 0%, 100% 0, 100% 81%, 79% 100%, 0% 100%);
-  height: 96px;
-  background-color: rgba(255, 255, 255, 0.05);
+    position: relative;
+    -webkit-clip-path: polygon(0% 0%, 100% 0, 100% 81%, 79% 100%, 0% 100%);
+    clip-path: polygon(0% 0%, 100% 0, 100% 81%, 79% 100%, 0% 100%);
+    height: 96px;
+    width: 100%;
+    padding: 10px;
+    border-radius: 10px;
+    backdrop-filter: blur(3.77917px);
+    background: linear-gradient(45deg, #9dfe00, #14d9e6) ;
 }
-.location-card::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  border-radius: 10px;
-  border: 1px solid transparent;
-  background: linear-gradient(45deg, #9dfe00, #14d9e6) border-box;
-  -webkit-mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
-  -webkit-mask-composite: destination-out;
-  mask-composite: exclude;
+.location-body {
+    position: absolute;
+    top: 1px;
+    left: 1px;
+    right: 1px;
+    bottom: 1px;
+    border-radius: 10px;
+    backdrop-filter: blur(3.77917px);
+    background: rgb(43, 42, 42);
+    -webkit-clip-path: polygon(0% 0%, 100% 0, 100% 81%, 79% 100%, 0% 100%);
+    clip-path: polygon(0% 0%, 100% 0, 100% 81%, 79% 100%, 0% 100%);
 }
 
 .location-card p {
